--- a/Project_deploy3/Service.yaml
+++ b/Project_deploy3/Service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myapp-service
-  namepsace: manish-namespace
+  # namepsace: manish-namespace
 spec:
   selector:
     app: mynewapp
